--- a/qs/templates/qs/index.html
+++ b/qs/templates/qs/index.html
@@ -2,22 +2,11 @@
 
 {% block mainbody %}
 
-
-
-<div id="page-heading-wrap">
-    <div class="inner">
-        <div class="padding">
-
-            <input type="search" name="q" results="0" placeholder="Search">
-
-        </div>
-    </div>
-</div>
-
 <div id="content" class="inner">
     <div id="main-col" class="alignleft">
         <div id="wrapper" class="padding">
-            {% for item in list %}
+            {% for item in post_latest %}
+
 
 
             <article class="post">
@@ -27,11 +16,11 @@
                     <header>
                         <div class="icon"></div>
 
-                        <time datetime="2015-03-30T06:30:07.000Z"><a href="/2015/03/30/sql-injection/">2015-03-30</a>
-                        </time>
+                        <!--<time datetime="2015-03-30T06:30:07.000Z"><a href="/2015/03/30/sql-injection/">2015-03-30</a>-->
+                        <!--</time>-->
 
+                        <h1 class="title transition"><a href="{% url 'detail'  pk=item.pk|default:1%}">{{item.title}}</a></h1>
 
-                        <h1 class="title transition"><a href="/2015/03/30/sql-injection/">{{item.brief}}</a></h1>
 
                     </header>
 
