--- a/qs/templates/qs/base.html
+++ b/qs/templates/qs/base.html
@@ -1,142 +1,108 @@
 {% load staticfiles %}
 
-<!DOCTYPE HTML>
-<html lang="zh-Hans">
-
-<head>
+<!DOCTYPE html>
+<html lang="zh-CN">
+  <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <!--<link rel="icon" href="../../favicon.ico">-->
 
-    <title>repository</title>
-    <meta name="author" content="mugbya">
+    <title>Repository</title>
 
-    <meta name="description" content="mugbua&#39;s blog">
-
-
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-
-    <!--<meta property="og:image" content="undefined"/>-->
-
-
-    <meta http-equiv="Content-Language" content="zh-Hans"/>
+    <!-- Bootstrap core CSS -->
+    <!--<link href="http://cdn.bootcss.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">-->
 
 
-    <!--<link href="/img/favicon.ico" rel="icon">-->
-
-    <!--<link rel="apple-touch-icon" href="/img/favicon.ico">-->
-    <!--<link rel="apple-touch-icon-precomposed" href="/img/favicon.ico">-->
 
 
-    <link rel="stylesheet" href="{% static 'style.css' %}" media="screen" type="text/css">
+    <!-- Custom styles for this template -->
+    <!--<link href="navbar.css" rel="stylesheet">-->
+    <link href=" {% static 'bootstrap-combined.min.css' %}" rel="stylesheet">
+    <link href=" {% static 'layoutit.css' %}" rel="stylesheet">
+    <link href=" {% static 'docs.min.css' %}" rel="stylesheet">
 
+<!--<link rel="stylesheet" href="http://apps.bdimg.com/libs/fontawesome/4.2.0/css/font-awesome.min.css">-->
 
-    <!-- Chinese readability improment -->
-    <style type="text/css">
-        article {font-weight: 400;letter-spacing: .01rem;}
-        article .entry{line-height:2;}
-    </style>
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
 
-
-    <style type="text/css">
-        /* Tim Pietrusky advanced checkbox hack (Android <= 4.1.2) */
-        body{ -webkit-animation: bugfix infinite 1s; }
-        @-webkit-keyframes bugfix { from {padding:0;} to {padding:0;} }
-    </style>
-
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+      <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
 
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <body >
 
-  ga('create', 'null', 'auto');
-  ga('send', 'pageview');
+      <!-- Main component for a primary marketing message or call to action -->
 
-
-
-
-
-    </script>
-
-
-    <!-- 360 Font and Baidu CDN in China -->
-
-    <link href='http://fonts.useso.com/css?family=Open+Sans:300,400|Playball' rel='stylesheet' type='text/css'>
-
-    <link href='http://apps.bdimg.com/libs/fontawesome/4.1.0/css/font-awesome.css' rel='stylesheet' type='text/css'>
-    <script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
+<div class="container-fluid">
+	<div class="row-fluid">
+		<div class="span12">
+			<div class="navbar">
+				<div class="navbar-inner">
+					<div class="container-fluid">
+						 <a data-target=".navbar-responsive-collapse" data-toggle="collapse" class="btn btn-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a> <a href="#" class="brand">ITSS Repository</a>
+						<div class="nav-collapse collapse navbar-responsive-collapse">
+							<ul class="nav">
 
 
-</head>
-
-<body>
-<header id="header" class="inner">
-    <div class="padding">
-        <div class="alignleft logo">
-            <h1><a href="/">ITSS知识库</a></h1>
-        </div>
-        <nav id="main-nav" class="alignright">
-            <input type="checkbox" id="toggle"/>
-            <label for="toggle" class="toggle" data-open="Main Menu" data-close="Close Menu" onclick><i
-                    class="fa fa-bars"></i></label>
-            <ul class="menu">
-
-                <li><a href="/">Home</a></li>
-
-                <li><a href="/archives">Archives</a></li>
+                            <div class="span12">
+                                <form class="form-search">
+                                    <input class="input-medium search-query" type="text" /> <button type="submit" class="btn">查找</button>
+                                </form>
+                            </div>
 
 
-                <li><a href="/atom.xml" target="_blank" title="bruce tan blog rss" class="rss-top"><i
-                        class="fa fa-rss"></i></a></li>
 
-            </ul>
-        </nav>
-        <div class="clearfix"></div>
-    </div>
-</header>
+							</ul>
+							<ul class="nav pull-right">
+								<li>
+									<a href="#">我的草稿</a>
+								</li>
+								<li class="divider-vertical">
+								</li>
+								<li class="dropdown">
+									 <a data-toggle="dropdown" class="dropdown-toggle" href="#">{{user}}<strong class="caret"></strong></a>
+									<ul class="dropdown-menu">
+										<li>
+											<a href="#">我的主页</a>
+										</li>
 
-<div id="page-heading-wrap">
-    <div class="inner">
-        <div class="padding">
-
-            <input type="search" name="q" results="0" placeholder="Search">
-
-            {% if user.is_authenticated %}
-                 <a href="{% url 'new_qs' %}">新增知识</a>
-            {% else %}
-                 <a href="{% url 'django.contrib.auth.views.login' %}" class="top-menu">登陆</a>
-            {% endif %}
-        </div>
-
-    </div>
+										<li>
+											<a href="#">帐号设置</a>
+										</li>
+										<li class="divider">
+										</li>
+										<li>
+											<a href="#">退出</a>
+										</li>
+									</ul>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 
 
-<!-- --------dfgdfgdfg------ -->
 
 
-<aside id="sidebar" class="alignright">
-    <div class="padding">
-
-        <div class="widget recent-post">
-            <h3 class="title"></h3>
-            <ul class="entry">
-                <a href="{% url 'draft' %}">我的草稿</a>
-            </ul>
-        </div>
-    </div>
-    </div>
-</aside>
-
-
-{% block mainbody %}
-
-{% endblock %}
-
-
-</body>
-
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="http://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
+    <script src="http://cdn.bootcss.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
 </html>
