--- a/qs/templates/registration/base.html
+++ b/qs/templates/registration/base.html
@@ -1,81 +1,102 @@
 {% load staticfiles %}
 
-<!DOCTYPE HTML>
-<html lang="zh-Hans">
 
-<head>
+<!DOCTYPE html>
+<html lang="zh-CN">
+  <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <!--<link rel="icon" href="../../favicon.ico">-->
 
-    <title>repository</title>
-    <meta name="author" content="mugbya">
+    <title>Repository</title>
 
-    <meta name="description" content="mugbua&#39;s blog">
-
-
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-
-    <!--<meta property="og:image" content="undefined"/>-->
-
-
-    <meta http-equiv="Content-Language" content="zh-Hans"/>
+    <!-- Bootstrap core CSS -->
+    <link href="http://cdn.bootcss.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
 
 
-    <!--<link href="/img/favicon.ico" rel="icon">-->
-
-    <!--<link rel="apple-touch-icon" href="/img/favicon.ico">-->
-    <!--<link rel="apple-touch-icon-precomposed" href="/img/favicon.ico">-->
 
 
-    <link rel="stylesheet" href="{% static 'style.css' %}" media="screen" type="text/css">
+    <!-- Custom styles for this template -->
+    <!--<link href="navbar.css" rel="stylesheet">-->
+    <link href=" {% static 'signin.css' %}" rel="stylesheet">
 
 
-    <!-- Chinese readability improment -->
-    <style type="text/css">
-        article {font-weight: 400;letter-spacing: .01rem;}
-        article .entry{line-height:2;}
-    </style>
 
 
-    <style type="text/css">
-        /* Tim Pietrusky advanced checkbox hack (Android <= 4.1.2) */
-        body{ -webkit-animation: bugfix infinite 1s; }
-        @-webkit-keyframes bugfix { from {padding:0;} to {padding:0;} }
-    </style>
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
 
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+      <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
 
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <body>
 
-  ga('create', 'null', 'auto');
-  ga('send', 'pageview');
+    <div class="container">
 
-    </script>
+      <!-- Static navbar -->
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Repository</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="{% url 'index' %}">ITSS Repository </a>
+          </div>
+          <div id="navbar" class="navbar-collapse collapse">
+            <!--<ul class="nav navbar-nav">-->
+              <!--<li class="active"><a href="#">Home</a></li>-->
+              <!--<li><a href="#">About</a></li>-->
+              <!--<li><a href="#">Contact</a></li>-->
+              <!--<li class="dropdown">-->
+                <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>-->
+                <!--<ul class="dropdown-menu" role="menu">-->
+                  <!--<li><a href="#">Action</a></li>-->
+                  <!--<li><a href="#">Another action</a></li>-->
+                  <!--<li><a href="#">Something else here</a></li>-->
+                  <!--<li class="divider"></li>-->
+                  <!--<li class="dropdown-header">Nav header</li>-->
+                  <!--<li><a href="#">Separated link</a></li>-->
+                  <!--<li><a href="#">One more separated link</a></li>-->
+                <!--</ul>-->
+              <!--</li>-->
+            <!--</ul>-->
+            <ul class="nav navbar-nav navbar-right">
+              <li class="active"><a href="{% url 'django.contrib.auth.views.login' %}">登陆 <span class="sr-only">(current)</span></a></li>
+              <li><a href="{% url 'register' %}">注册</a></li>
+              <!--<li><a href="../navbar-fixed-top/">Fixed top</a></li>-->
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div><!--/.container-fluid -->
+      </nav>
+
+      <!-- Main component for a primary marketing message or call to action -->
+      <div class="jumbotron">
+          {% block mainbody %}
+
+          {% endblock %}
+      </div>
+
+    </div> <!-- /container -->
 
 
-    <!-- 360 Font and Baidu CDN in China -->
-
-    <link href='http://fonts.useso.com/css?family=Open+Sans:300,400|Playball' rel='stylesheet' type='text/css'>
-
-    <link href='http://apps.bdimg.com/libs/fontawesome/4.1.0/css/font-awesome.css' rel='stylesheet' type='text/css'>
-    <script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
-
-
-</head>
-
-<body>
-
-
-{% block mainbody %}
-
-{% endblock %}
-
-
-</body>
-
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="http://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
+    <script src="http://cdn.bootcss.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
 </html>
