--- a/qs/templates/qs/base.html
+++ b/qs/templates/qs/base.html
@@ -103,6 +103,36 @@
 </div>
 
 
+<div id="header">
+	<div class="row-fluid">
+		<div class="span12">
+			<div class="row-fluid">
+				<div class="span6">
+					<blockquote>
+						<p>
+							这是logo位置.
+						</p> <small>关键词 <cite>开源</cite></small>
+					</blockquote>
+				</div>
+
+						<div class="nav-collapse collapse navbar-responsive-collapse">
+
+							<ul class="head_pull-right">
+								<li>
+									<a href="#">问题</a>
+								</li>
+
+								<li >
+                                    <a href="#">标签</a>
+								</li>
+							</ul>
+						</div>
+
+
+			</div>
+		</div>
+	</div>
+</div>
 
 
     <!-- Bootstrap core JavaScript
