--- a/qs/templates/qs/base.html
+++ b/qs/templates/qs/base.html
@@ -18,12 +18,20 @@
 
 
 
-
     <!-- Custom styles for this template -->
     <!--<link href="navbar.css" rel="stylesheet">-->
     <link href=" {% static 'bootstrap-combined.min.css' %}" rel="stylesheet">
     <link href=" {% static 'layoutit.css' %}" rel="stylesheet">
     <link href=" {% static 'docs.min.css' %}" rel="stylesheet">
+
+    <!--<link href=" {% static 'editor/editor.css' %}" rel="stylesheet">-->
+    <!--<link href=" {% static 'editor/editor.js' %}" rel="stylesheet">-->
+    <!--<link href=" {% static 'editor/marked.js' %}" rel="stylesheet">-->
+
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/editor/0.1.0/editor.css">
+    <script src="//cdn.jsdelivr.net/editor/0.1.0/editor.js"></script>
+    <script src="//cdn.jsdelivr.net/editor/0.1.0/marked.js"></script>
+
 
 <!--<link rel="stylesheet" href="http://apps.bdimg.com/libs/fontawesome/4.2.0/css/font-awesome.min.css">-->
 
@@ -36,11 +44,21 @@
       <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <script>
+        function oo(){
+            var editor = new Editor();
+            editor.render();
+        }
+
+    </script>
   </head>
 
-  <body >
+  <body onload="oo()">
 
       <!-- Main component for a primary marketing message or call to action -->
+
+            <!-- top  -->
 
 <div class="container-fluid">
 	<div class="row-fluid">
@@ -48,7 +66,7 @@
 			<div class="navbar">
 				<div class="navbar-inner">
 					<div class="container-fluid">
-						 <a data-target=".navbar-responsive-collapse" data-toggle="collapse" class="btn btn-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a> <a href="#" class="brand">ITSS Repository</a>
+						 <a data-target=".navbar-responsive-collapse" data-toggle="collapse" class="btn btn-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a> <a href="/" class="brand">ITSS Repository</a>
 						<div class="nav-collapse collapse navbar-responsive-collapse">
 							<ul class="nav">
 
@@ -102,6 +120,7 @@
 	</div>
 </div>
 
+      <!-- header -->
 
 <div id="header">
 	<div class="row-fluid">
@@ -111,7 +130,7 @@
 					<blockquote>
 						<p>
 							这是logo位置.
-						</p> <small>关键词 <cite>开源</cite></small>
+						</p> <small>ITSS <cite>repository</cite></small>
 					</blockquote>
 				</div>
 
@@ -134,6 +153,18 @@
 	</div>
 </div>
 
+
+<div class="container-question">
+	<div class="row-fluid">
+		<div class="span12">
+
+            {% block mainbody %}
+
+            {% endblock %}
+
+		</div>
+	</div>
+</div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
