增加草稿箱功能

--- a/qs/templates/qs/base.html
+++ b/qs/templates/qs/base.html
@@ -95,7 +95,7 @@
                                                 <a href="#">我的主页</a>
                                             </li>
                                             <li>
-                                                <a href="#">我的草稿</a>
+                                                <a href="{% url 'draft_list' %}">我的草稿</a>
                                             </li>
                                             <li>
                                                 <a href="#">帐号设置</a>
