--- a/qs/templates/qs/node/draft_detail.html
+++ b/qs/templates/qs/node/draft_detail.html
@@ -7,10 +7,10 @@
         {{ form.as_p }}
 
         <div class="pull-right">
+            <button type="submit" class="btn" name="discard">丢弃</button>
             <button type="submit" class="btn" name="draft">保存到草稿</button>
             <button type="submit" class="btn" name="publish">保存并发布</button>
         </div>
     </form>
 
 {% endblock %}
-
