--- a/qs/templates/qs/node/detail.html
+++ b/qs/templates/qs/node/detail.html
@@ -52,8 +52,7 @@
         {{ form.as_p }}
 
         <div class="pull-right">
-            <button type="submit" class="btn" name="draft">保存到草稿</button>
-            <button type="submit" class="btn" name="publish">保存并发布</button>
+            <button type="submit" class="btn" name="publish">提交</button>
         </div>
     </form>
 
