--- a/qs/templates/partial/_header.html
+++ b/qs/templates/partial/_header.html
@@ -2,7 +2,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-1 text-center">
-				<a href="" class="fa fa-github logo"></a>
+				<a href="/" class="fa fa-github logo"></a>
 			</div>
 			<div class="col-md-8">
 				<div class="row">
