--- a/qs/static/scss/user.scss
+++ b/qs/static/scss/user.scss
@@ -1,5 +1,33 @@
 @charset "UTF-8";
 
 .login-box{
+	width: 200px;
+	margin: 0 auto;
 	padding: 100px 0;
+}
+
+.error-text{
+	font-size: 14px;
+	line-height: 20px;
+	color: #f23;
+	height: 40px;
+	overflow: hidden;
+}
+
+.register-box{
+	width: 400px;
+	margin: 0 auto;
+	padding: 100px 0;
+	
+	.row{
+		margin: 0;
+	}
+	p{
+		font-size: 14px;
+		line-height: 1.5;
+
+		strong{
+			color: #f34;
+		}
+	}
 }
