--- a/qs/templates/partial/_header.html
+++ b/qs/templates/partial/_header.html
@@ -1,37 +1,37 @@
 <header>
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-md-1 text-center">
-				<a href="" class="fa fa-github logo"></a>
+			<div class="col-md-2 text-center">
+				<h1><a href="/">ITSS Repository</a></h1>
 			</div>
-			<div class="col-md-8">
+			<div class="col-md-7">
 				<div class="row">
-					<div class="col-md-6">
+					<div class="col-md-7">
 						<!-- search -->
-						<form action="">
-							<div class="input-group search">
-								<input type="text" class="form-control">
-								<span class="input-group-btn">
-									<button type="button" class="btn btn-default">
-										<i class="glyphicon glyphicon-search"></i>
-									</button>
-								</span>
+						<form class="navbar-form" action="">
+							<div class="form-group">
+								<input type="text" class="form-control" placeholder="Search">
 							</div>
-
+							<button type="submit" class="btn btn-default">
+								<i class="glyphicon glyphicon-search"></i>
+							</button>
 						</form>
 					</div>
-					<div class="col-md-6">
+					<div class="col-md-5">
 						<!-- nav -->
 						<nav>
-							<ul class="nav nav-tabs">
-								<li role="presentation" class="active">
-									<a href="{% url 'new_qs' %}">新增知识</a>
+							<ul class="nav navbar-nav">
+								<li class="active">
+									<a href="">问答</a>	
 								</li>
-								<li role="presentation">
-									<a href="#">热点</a>
+								<li>
+									<a href="#">文章</a>
 								</li>
-								<li role="presentation">
-									<a href="#">最新</a>
+								<li>
+									<a href="#">活动</a>
+								</li>
+								<li>
+									<a href="#">榜单</a>
 								</li>
 							</ul>
 						</nav>
@@ -39,7 +39,10 @@
 				</div>
 			</div>
 			<div class="col-md-3">
-				<ul class="nav pull-right">
+				<ul class="nav navbar-nav navbar-right">
+					<li>
+						<a href="{% url 'new_qs' %}">新增知识</a>
+					</li>
 					<li class="dropdown">
 						{% if user.is_authenticated %}
 						<a data-toggle="dropdown" class="dropdown-toggle" href="#">
@@ -61,7 +64,8 @@
 							</li>
 						</ul>
 						{% else %}
-						<a  href="{% url 'django.contrib.auth.views.login' %}">登录</a>
+						<li><a  href="{% url 'django.contrib.auth.views.login' %}">登录</a></li>
+						<li><a href="{% url 'register' %}">注册</a></li>
 						{% endif %}
 					</li>
 				</ul>
