--- a/qs/templates/registration/login.html
+++ b/qs/templates/registration/login.html
@@ -1,32 +1,33 @@
-{% extends "partial/base.html" %}
+{% extends "registration/base.html" %}
 
 
 {% block head %}
-  <!-- <link rel="stylesheet" href=""> -->
 {% endblock %}
 
 
 {% block mainbody %}
-
-  <div class="row login-box">
-    <div class="col-md-6 col-md-offset-2">
-        {% if form.errors %}
-          <p>Your username and password didn't match. Please try again.</p>
-        {% endif %}
-        <form class="form-signin" method="post" action="{% url 'django.contrib.auth.views.login' %}">
-          {% csrf_token %}
-          <label for="username">用户名/Email:</label>
-          <input type="text" name="username">
-          <!-- {{ form.username }} -->
-          <label for="password">密 码:</label>
-          <input type="text" name="password">
-          <!-- {{ form.password }} -->
-          <div class="checkbox">
-            <label>
-              <input type="checkbox" value="remember-me">记住登录</label>
-          </div>
-          <button class="btn btn-default" type="submit">登 录</button>
-        </form>
-    </div>
+<div class="login-box">
+  <div class="row">
+    <p class="error-text">
+      {% if form.errors %}
+        你的用户名或密码输入错误
+      {% endif %}
+    </p>
+    <form class="form-signin" method="post" action="{% url 'django.contrib.auth.views.login' %}">
+      {% csrf_token %}
+      <label for="username">用户名/Email:</label>
+      <br>
+      <input type="text" name="username" class="form-control">
+      <br>
+      <label for="password">密 码:</label>
+      <br>
+      <input type="text" name="password" class="form-control">
+      <div class="checkbox">
+        <label>
+          <input type="checkbox" value="remember-me">记住登录</label>
+      </div>
+      <button class="btn btn-default" type="submit">登 录</button>
+    </form>
   </div>
+</div>
 {% endblock %}
