--- a/qs/static/css/user.css
+++ b/qs/static/css/user.css
@@ -1,7 +1,12 @@
 .login-box {
-  width: 200px;
+  width: 300px;
   margin: 0 auto;
   padding: 100px 0; }
+  .login-box .row {
+    margin: 0; }
+    .login-box .row > div {
+      margin: 0;
+      padding: 0; }
 
 .error-text {
   font-size: 14px;
